--- a/Twinkle.View/View.nuspec
+++ b/Twinkle.View/View.nuspec
@@ -3,7 +3,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>Twinkle.View</id>
-        <version>1.0.0-beta3</version>
+        <version>1.0.0-beta5</version>
         <authors>Twinkle</authors>
         <owners>Twinkle</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -16,8 +16,8 @@
         <repository url="https://github.com/twinkle-tools/Twinkle.View" />
         <dependencies>
             <group targetFramework=".NETStandard2.1">
-                <dependency id="Fody" version="6.1.1" exclude="Build,Analyzers" />
-                <dependency id="MethodDecorator.Fody" version="1.1.0" exclude="Build,Analyzers" />
+                <dependency id="Fody" version="6.1.1" include="All" />
+                <dependency id="MethodDecorator.Fody" version="1.1.0" include="All" />
                 <dependency id="Microsoft.Extensions.Configuration.Json" version="3.1.3" exclude="Build,Analyzers" />
                 <dependency id="Newtonsoft.Json" version="12.0.3" exclude="Build,Analyzers" />
                 <dependency id="NLog" version="4.7.0" exclude="Build,Analyzers" />
