add Threads Manager and static endpoint

--- a/Twinkle.View/Twinkle.View.csproj
+++ b/Twinkle.View/Twinkle.View.csproj
@@ -22,4 +22,8 @@
       <Compile Remove="Twinkle.View.AdditionalSettings.cs" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Interfaces" />
+    </ItemGroup>
+
 </Project>
